--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -1,14 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="SampleController">
-   <TextArea layoutX="71.0" layoutY="326.0" prefHeight="26.0" prefWidth="418.0"/>
-   <Button layoutX="490.0" layoutY="326.0" mnemonicParsing="false" prefHeight="39.0" prefWidth="66.0" text="SEND"/>
-   <ListView fx:id="listView" layoutX="71.0" layoutY="0" prefHeight="300.0" prefWidth="418.0"/>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="267.0" prefWidth="344.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SampleController">
+   <children>
+      <Label alignment="CENTER" layoutX="46.0" layoutY="41.0" prefHeight="28.0" prefWidth="252.0" text="Welcome to PalChat">
+         <font>
+            <Font name="HP Simplified Light" size="28.0" />
+         </font>
+      </Label>
+      <Button layoutX="100.0" layoutY="116.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="146.0" text="LOGIN">
+         <font>
+            <Font name="HP Simplified" size="12.0" />
+         </font>
+      </Button>
+      <Button layoutX="99.0" layoutY="166.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="146.0" text="SIGNUP">
+         <font>
+            <Font name="HP Simplified" size="12.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
