--- a/src/sample.fxml
+++ b/src/sample.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Point3D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -7,16 +8,22 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="269.0" prefWidth="346.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="SampleController">
-   <Button layoutX="14.0" layoutY="14.0" mnemonicParsing="false" onAction="#esc" prefHeight="26.0" prefWidth="39.0" text="esc" />
-   <Label alignment="CENTER" layoutX="46.0" layoutY="41.0" prefHeight="28.0" prefWidth="252.0" text="Welcome to PalChat">
+   <Button fx:id="esc" alignment="CENTER" layoutX="5.0" layoutY="5.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#getWelcomePage" prefHeight="25.0" prefWidth="25.0" style="-fx-background-radius: 50%; -fx-background-color: #cc0e2e;" text="-" textFill="WHITE" textOverrun="CLIP" visible="false">
+      <rotationAxis>
+         <Point3D />
+      </rotationAxis>
+      <font>
+         <Font name="System Bold" size="14.0" />
+      </font></Button>
+   <Label fx:id="title" alignment="CENTER" layoutX="46.0" layoutY="41.0" prefHeight="28.0" prefWidth="252.0" text="Welcome to PalChat">
       <font>
          <Font name="HP Simplified Light" size="28.0" />
       </font>
    </Label>
    <AnchorPane fx:id="signup_page" layoutX="73.0" layoutY="90.0" prefHeight="110.0" prefWidth="195.0" visible="false">
       <children>
-         <TextField layoutX="10.0" layoutY="26.0" prefHeight="26.0" prefWidth="179.0" />
-         <Button fx:id="f_signup" layoutX="27.0" layoutY="60.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="146.0" text="SIGNUP">
+         <TextField fx:id="textSignup" layoutX="10.0" layoutY="26.0" prefHeight="26.0" prefWidth="179.0" promptText="Create Username" />
+         <Button fx:id="f_signup" onAction="#requestSignup" layoutX="27.0" layoutY="60.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="146.0" text="SIGNUP">
             <font>
                <Font name="HP Simplified" size="12.0" />
             </font>
@@ -25,12 +32,12 @@
    </AnchorPane>
    <AnchorPane fx:id="welcome_page" layoutX="99.0" layoutY="116.0" prefHeight="74.0" prefWidth="148.0">
       <children>
-         <Button fx:id="login" layoutX="1.0" mnemonicParsing="false" onAction="#login" prefHeight="34.0" prefWidth="146.0" text="LOGIN">
+         <Button fx:id="login" layoutX="1.0" mnemonicParsing="false" onAction="#getLoginPage" prefHeight="34.0" prefWidth="146.0" text="LOGIN">
             <font>
                <Font name="HP Simplified" size="12.0" />
             </font>
          </Button>
-         <Button fx:id="signup" layoutY="50.0" mnemonicParsing="false" onAction="#signup" prefHeight="34.0" prefWidth="146.0" text="SIGNUP">
+         <Button fx:id="signup" layoutY="50.0" mnemonicParsing="false" onAction="#getSignupPage" prefHeight="34.0" prefWidth="146.0" text="SIGNUP">
             <font>
                <Font name="HP Simplified" size="12.0" />
             </font>
@@ -39,8 +46,8 @@
    </AnchorPane>
    <AnchorPane fx:id="login_page" layoutX="73.0" layoutY="90.0" prefHeight="110.0" prefWidth="195.0" visible="false">
       <children>
-         <TextField layoutX="10.0" layoutY="26.0" prefHeight="26.0" prefWidth="179.0" />
-         <Button fx:id="f_login" layoutX="27.0" layoutY="60.0" mnemonicParsing="false" onAction="#login" prefHeight="34.0" prefWidth="146.0" text="LOGIN">
+         <TextField fx:id="textLogin" layoutX="10.0" layoutY="26.0" prefHeight="26.0" prefWidth="179.0" promptText="Enter Username" />
+         <Button fx:id="f_login" layoutX="27.0" layoutY="60.0" mnemonicParsing="false" prefHeight="34.0" prefWidth="146.0" text="LOGIN">
             <font>
                <Font name="HP Simplified" size="12.0" />
             </font>
